<resources>
    <string name="app_name">ParkKing</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Park King</string>
    <string name="nav_header_subtitle">491B</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="option_get_place">Get place</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lot_13">Lot 13</string>
    <string name="recent_parking_lots">Recent Parking Lots</string>
    <string name="g13">G13</string>
    <string name="g14">g14</string>
    <string name="settings">Settings</string>
    <string name="list_parking_lots">List Parking Lots</string>
    <string name="dashboard">Dashboard</string>
    <string name="list_parking_lots2">list parking lots</string>
    <string name="recent_parking_lots2">recent parking lots</string>
    <string name="find_parking_lots">find parking lots</string>
    <string name="settings2">settings</string>
    <string name="app_logo">app logo</string>
    <string name="g_13">g 13</string>
    <string name="g_14">g 14</string>
    <string name="about_park_king">
        \t As students of California State University, Long Beach, many of us begin our school days with dread as we struggle to find parking. It is always frustrating
        to circle around the parking lots hoping you find a parking spot and won’t be late to class. \n\n

        \t The Park King app helps all drivers easily find and navigate their way to open parking spots in a parking lot that is registered with our system. Park King uses
        smart cameras that utilize machine learning and computer vision algorithms to detect whether or not a parking spot is open or occupied.\n\n

        \t The Park King system is able to view how
        many and which specific parking spots are open by using a cloud server that receives data from our smart cameras and processes it and then sends it to the
        smartphone app.\n\n</string>
</resources>

